fix ie alignement

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -49,17 +49,29 @@ right: 23px;
 bottom: 99px;
 }
 
+.ie #imgPhoenixSend {
+   bottom: -162px;
+}
+
 html {
     background-color:#000000;
 }
 
-body,p,h1,h2,h3,h4,p{
-    font-family: Helvetica, Arial;
+body,p{
+     /*font-family: "adelle",serif!important;*/
+     font-family: "alber-new-web",sans-serif!important;
+     -webkit-font-smoothing: antialiased;
 }
+
+h1,h2,h3,h4 {
+     /*font-family: "adelle",serif!important;*/
+     font-family: "alber-new-web",sans-serif!important;
+     -webkit-font-smoothing: antialiased;
+}
+
 
 body {
     background-color: #f5f5f5;
-     -webkit-font-smoothing: antialiased;
 }
 
 
